fixed spacing, buttons, and everything else >_>

--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -11,7 +11,7 @@ header {
 }
 
 .tint {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.5);
   height: auto;
   width: auto;;
 }
